--- a/html/._book003.html
+++ b/html/._book003.html
@@ -1,6 +1,5 @@
 <!--
-HTML file automatically generated from DocOnce source
-(https://github.com/doconce/doconce/)
+File automatically generated using DocOnce (https://github.com/doconce/doconce/):
 doconce format html book.do.txt CHAPTER=chapter BOOK=book APPENDIX=appendix --exercise_numbering=chapter --html_style=bootswatch_journal --html_code_style=inherit --html_output=book
 -->
 <html>
@@ -232,7 +231,7 @@ code { color: inherit; background-color: transparent; }
               ('CO$_2$ diffusion into aquifers',
                1,
                None,
-               'co-_2-diffusion-into-aquifers'),
+               'co-2-diffusion-into-aquifers'),
               ('Optimization and nonlinear systems', 0, 'ch:nlin', 'ch:nlin'),
               ('Nonlinear equations', 1, None, 'nonlinear-equations'),
               ('Example: van der Waals equation of state',
@@ -242,7 +241,7 @@ code { color: inherit; background-color: transparent; }
               ('Exercise 5.1: van der Waal EOS and CO$_2$',
                2,
                None,
-               'exercise-5-1-van-der-waal-eos-and-co-_2'),
+               'exercise-5-1-van-der-waal-eos-and-co-2'),
               ('Fixed-point iteration', 1, None, 'fixed-point-iteration'),
               ('Exercise 5.2: Implement the fixed point iteration',
                2,
@@ -511,11 +510,11 @@ $$
      <!-- navigation toc: --> <li><a href="._book004.html#exercise-4-2-curing-of-concrete-and-matrix-formulation" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Exercise 4.2: Curing of Concrete and Matrix Formulation</a></li>
      <!-- navigation toc: --> <li><a href="._book004.html#exercise-4-3-solve-the-full-heat-equation" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Exercise 4.3: Solve the full heat equation</a></li>
      <!-- navigation toc: --> <li><a href="._book004.html#exercise-4-4-using-sparse-matrices-in-python" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Exercise 4.4: Using sparse matrices in python</a></li>
-     <!-- navigation toc: --> <li><a href="._book004.html#co-_2-diffusion-into-aquifers" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;CO$_2$ diffusion into aquifers</a></li>
+     <!-- navigation toc: --> <li><a href="._book004.html#co-2-diffusion-into-aquifers" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;CO$_2$ diffusion into aquifers</a></li>
      <!-- navigation toc: --> <li><a href="._book005.html#ch:nlin" style="font-size: 80%;"><b>Optimization and nonlinear systems</b></a></li>
      <!-- navigation toc: --> <li><a href="._book005.html#nonlinear-equations" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;Nonlinear equations</a></li>
      <!-- navigation toc: --> <li><a href="._book005.html#example-van-der-waals-equation-of-state" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;Example: van der Waals equation of state</a></li>
-     <!-- navigation toc: --> <li><a href="._book005.html#exercise-5-1-van-der-waal-eos-and-co-_2" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Exercise 5.1: van der Waal EOS and CO$_2$</a></li>
+     <!-- navigation toc: --> <li><a href="._book005.html#exercise-5-1-van-der-waal-eos-and-co-2" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Exercise 5.1: van der Waal EOS and CO$_2$</a></li>
      <!-- navigation toc: --> <li><a href="._book005.html#fixed-point-iteration" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;Fixed-point iteration</a></li>
      <!-- navigation toc: --> <li><a href="._book005.html#exercise-5-2-implement-the-fixed-point-iteration" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Exercise 5.2: Implement the fixed point iteration</a></li>
      <!-- navigation toc: --> <li><a href="._book005.html#exercise-5-3-finding-the-molar-volume-from-the-van-der-waal-eos-by-fixed-point-iteration" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Exercise 5.3: Finding the molar volume from the van der Waal EOS by fixed point iteration</a></li>
@@ -624,9 +623,9 @@ In figure <a href="#fig:taylor:sinx">10</a>, we have plotted \( \sin x \) for va
 <center> <!-- figure label: --> <div id="fig:taylor:sinx"></div> <!-- FIGURE -->
 <hr class="figure">
 <center>
-<p class="caption">Figure 10:  A plot of \( \sin x \) for different spacing of the \( x \)-values.  <!-- caption label: fig:taylor:sinx --> </p>
+<p class="caption">Figure 10: A plot of \( \sin x \) for different spacing of the \( x \)-values.  <!-- caption label: fig:taylor:sinx --></p>
 </center>
-<p><img src="fig-taylor/func_plot.png" align="bottom" width=600></p>
+<p><img src="fig-taylor/func_plot.png" width="600" align="bottom"></p>
 </center>
 
 <p>From the figure we see that in some areas only a couple of points are needed in order to
@@ -672,9 +671,9 @@ $$
 <center> <!-- figure label: --> <div id="fig:mac_sin"></div> <!-- FIGURE -->
 <hr class="figure">
 <center>
-<p class="caption">Figure 11:  Nine first terms of the Maclaurin series of \( \sin x \).  <!-- caption label: fig:mac_sin --> </p>
+<p class="caption">Figure 11: Nine first terms of the Maclaurin series of \( \sin x \).  <!-- caption label: fig:mac_sin --></p>
 </center>
-<p><img src="fig-taylor/mac_sin.png" align="bottom" width=600></p>
+<p><img src="fig-taylor/mac_sin.png" width="600" align="bottom"></p>
 </center>
 
 <p>Notice that close to \( x=0 \) we only need one term, as we move further away from this point more and more term needs to be added. Thus, Taylors formula is only exact if we include an infinite number of terms. In practice we only include a limited number of terms and truncate the series up to a given order. Luckily, Taylors formula include an estimate of the error we do when we truncate the series. </p>
@@ -814,9 +813,9 @@ $$
 <center> <!-- figure label: --> <div id="fig:taylor:fd"></div> <!-- FIGURE -->
 <hr class="figure">
 <center>
-<p class="caption">Figure 12:  A graphical interpretation of the forward and central difference formula.  <!-- caption label: fig:taylor:fd --> </p>
+<p class="caption">Figure 12: A graphical interpretation of the forward and central difference formula.  <!-- caption label: fig:taylor:fd --></p>
 </center>
-<p><img src="fig-taylor/fd.png" align="bottom" width=800></p>
+<p><img src="fig-taylor/fd.png" width="400" align="bottom"></p>
 </center>
 
 <h3 id="sec:taylor:hhd" class="anchor">Higher order derivative</h3>
@@ -927,9 +926,9 @@ plt<span style="color: #666666">.</span>ylabel(<span style="color: #BA2121">&#39
 <center> <!-- figure label: --> <div id="fig:taylor:df2"></div> <!-- FIGURE -->
 <hr class="figure">
 <center>
-<p class="caption">Figure 13:  Numerical error of derivatives of \( \sin x \) for various step sizes.  <!-- caption label: fig:taylor:df2 --> </p>
+<p class="caption">Figure 13: Numerical error of derivatives of \( \sin x \) for various step sizes.  <!-- caption label: fig:taylor:df2 --></p>
 </center>
-<p><img src="fig-taylor/df2_mod.png" align="bottom" width=800></p>
+<p><img src="fig-taylor/df2_mod.png" width="400" align="bottom"></p>
 </center>
 
 <p>There are several important lessons from figure <a href="#fig:taylor:df2">13</a></p>
@@ -1153,9 +1152,9 @@ $$
 <center> <!-- figure label: --> <div id="fig:taylor:64bit"></div> <!-- FIGURE -->
 <hr class="figure">
 <center>
-<p class="caption">Figure 14:  Representation of a 64 bits floating point number according to the IEEE 754-1985 standard. For a 32 bits floating point number, 8, is reserved for the exponent and 23 for the fraction.  <!-- caption label: fig:taylor:64bit --> </p>
+<p class="caption">Figure 14: Representation of a 64 bits floating point number according to the IEEE 754-1985 standard. For a 32 bits floating point number, 8, is reserved for the exponent and 23 for the fraction.  <!-- caption label: fig:taylor:64bit --></p>
 </center>
-<p><img src="fig-taylor/64bit.png" align="bottom" width=800></p>
+<p><img src="fig-taylor/64bit.png" width="400" align="bottom"></p>
 </center>
 
 <p>The exponent must be positive to represent numbers with absolute value larger than one, and negative to represent numbers with absolute value less than one.  To make this more explicit the simple formula in equation <a href="#mjx-eqn-4.16">(4.16)</a> is rewritten:</p>
@@ -1252,11 +1251,9 @@ derivative in equation \eqref{eq:taylor:cd}, that a higher step size gives a mor
 <p>
 <!-- navigation buttons at the bottom of the page -->
 <ul class="pager">
-
   <li class="previous">
     <a href="._book002.html">&larr; Prev</a>
   </li>
-
   <li class="next">
     <a href="._book004.html">Next &rarr;</a>
   </li>
@@ -1273,5 +1270,4 @@ derivative in equation \eqref{eq:taylor:cd}, that a higher step size gives a mor
 -->
 </body>
 </html>
-    
 
