--- a/html/._book004.html
+++ b/html/._book004.html
@@ -1,6 +1,5 @@
 <!--
-HTML file automatically generated from DocOnce source
-(https://github.com/doconce/doconce/)
+File automatically generated using DocOnce (https://github.com/doconce/doconce/):
 doconce format html book.do.txt CHAPTER=chapter BOOK=book APPENDIX=appendix --exercise_numbering=chapter --html_style=bootswatch_journal --html_code_style=inherit --html_output=book
 -->
 <html>
@@ -232,7 +231,7 @@ code { color: inherit; background-color: transparent; }
               ('CO$_2$ diffusion into aquifers',
                1,
                None,
-               'co-_2-diffusion-into-aquifers'),
+               'co-2-diffusion-into-aquifers'),
               ('Optimization and nonlinear systems', 0, 'ch:nlin', 'ch:nlin'),
               ('Nonlinear equations', 1, None, 'nonlinear-equations'),
               ('Example: van der Waals equation of state',
@@ -242,7 +241,7 @@ code { color: inherit; background-color: transparent; }
               ('Exercise 5.1: van der Waal EOS and CO$_2$',
                2,
                None,
-               'exercise-5-1-van-der-waal-eos-and-co-_2'),
+               'exercise-5-1-van-der-waal-eos-and-co-2'),
               ('Fixed-point iteration', 1, None, 'fixed-point-iteration'),
               ('Exercise 5.2: Implement the fixed point iteration',
                2,
@@ -511,11 +510,11 @@ $$
      <!-- navigation toc: --> <li><a href="#exercise-4-2-curing-of-concrete-and-matrix-formulation" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Exercise 4.2: Curing of Concrete and Matrix Formulation</a></li>
      <!-- navigation toc: --> <li><a href="#exercise-4-3-solve-the-full-heat-equation" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Exercise 4.3: Solve the full heat equation</a></li>
      <!-- navigation toc: --> <li><a href="#exercise-4-4-using-sparse-matrices-in-python" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Exercise 4.4: Using sparse matrices in python</a></li>
-     <!-- navigation toc: --> <li><a href="#co-_2-diffusion-into-aquifers" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;CO$_2$ diffusion into aquifers</a></li>
+     <!-- navigation toc: --> <li><a href="#co-2-diffusion-into-aquifers" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;CO$_2$ diffusion into aquifers</a></li>
      <!-- navigation toc: --> <li><a href="._book005.html#ch:nlin" style="font-size: 80%;"><b>Optimization and nonlinear systems</b></a></li>
      <!-- navigation toc: --> <li><a href="._book005.html#nonlinear-equations" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;Nonlinear equations</a></li>
      <!-- navigation toc: --> <li><a href="._book005.html#example-van-der-waals-equation-of-state" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;Example: van der Waals equation of state</a></li>
-     <!-- navigation toc: --> <li><a href="._book005.html#exercise-5-1-van-der-waal-eos-and-co-_2" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Exercise 5.1: van der Waal EOS and CO$_2$</a></li>
+     <!-- navigation toc: --> <li><a href="._book005.html#exercise-5-1-van-der-waal-eos-and-co-2" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Exercise 5.1: van der Waal EOS and CO$_2$</a></li>
      <!-- navigation toc: --> <li><a href="._book005.html#fixed-point-iteration" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;Fixed-point iteration</a></li>
      <!-- navigation toc: --> <li><a href="._book005.html#exercise-5-2-implement-the-fixed-point-iteration" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Exercise 5.2: Implement the fixed point iteration</a></li>
      <!-- navigation toc: --> <li><a href="._book005.html#exercise-5-3-finding-the-molar-volume-from-the-van-der-waal-eos-by-fixed-point-iteration" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Exercise 5.3: Finding the molar volume from the van der Waal EOS by fixed point iteration</a></li>
@@ -598,9 +597,9 @@ $$
 <center> <!-- figure label: --> <div id="fig:lin:flux"></div> <!-- FIGURE -->
 <hr class="figure">
 <center>
-<p class="caption">Figure 15:  A closed volume, \( V(x)=A(x)dx \), where a quantity flows in and out (illustrated by the green lines), there is also a possibility for generation or loss of the same quantity inside the volume.  <!-- caption label: fig:lin:flux --> </p>
+<p class="caption">Figure 15: A closed volume, \( V(x)=A(x)dx \), where a quantity flows in and out (illustrated by the green lines), there is also a possibility for generation or loss of the same quantity inside the volume.  <!-- caption label: fig:lin:flux --></p>
 </center>
-<p><img src="fig-lin/flux.png" align="bottom" width=800></p>
+<p><img src="fig-lin/flux.png" width="400" align="bottom"></p>
 </center>
 
 $$
@@ -671,9 +670,9 @@ $$
 <center> <!-- figure label: --> <div id="fig:lin:grid"></div> <!-- FIGURE -->
 <hr class="figure">
 <center>
-<p class="caption">Figure 16:  Examples of discretization of a system with length \( L \) (left) the  boundaries lies exactly at the boundary nodes, (right) boundary nodes lies half-way between the grid nodes.  <!-- caption label: fig:lin:grid --> </p>
+<p class="caption">Figure 16: Examples of discretization of a system with length \( L \) (left) the  boundaries lies exactly at the boundary nodes, (right) boundary nodes lies half-way between the grid nodes.  <!-- caption label: fig:lin:grid --></p>
 </center>
-<p><img src="fig-lin/grid.png" align="bottom" width=800></p>
+<p><img src="fig-lin/grid.png" width="400" align="bottom"></p>
 </center>
 
 <p>There are many things to consider when discretizing equations, but perhaps the most important are</p>
@@ -771,9 +770,9 @@ $$
 <center> <!-- figure label: --> <div id="fig:lin:bbc"></div> <!-- FIGURE -->
 <hr class="figure">
 <center>
-<p class="caption">Figure 17:  Flux boundary condition (Neumann), and value boundary condition (Dirichlet). For the upper right boundary condition we use Taylors formula to interpolate, see equation \eqref{eq:lin:dd}.  <!-- caption label: fig:lin:bbc --> </p>
+<p class="caption">Figure 17: Flux boundary condition (Neumann), and value boundary condition (Dirichlet). For the upper right boundary condition we use Taylors formula to interpolate, see equation \eqref{eq:lin:dd}.  <!-- caption label: fig:lin:bbc --></p>
 </center>
-<p><img src="fig-lin/bbc.png" align="bottom" width=800></p>
+<p><img src="fig-lin/bbc.png" width="400" align="bottom"></p>
 </center>
 
 <div class="alert alert-block alert-success alert-text-normal"><b>Example: Steady state heat equation as a linear problem</b>
@@ -1448,9 +1447,9 @@ $$
 <center> <!-- figure label: --> <div id="fig:lin:reg"></div> <!-- FIGURE -->
 <hr class="figure">
 <center>
-<p class="caption">Figure 18:  Linear regression by minimizing the total distance to all the points.  <!-- caption label: fig:lin:reg --> </p>
+<p class="caption">Figure 18: Linear regression by minimizing the total distance to all the points.  <!-- caption label: fig:lin:reg --></p>
 </center>
-<p><img src="fig-lin/reg.png" align="bottom" width=800></p>
+<p><img src="fig-lin/reg.png" width="800" align="bottom"></p>
 </center>
 
 <p>Mathematically we can express the distance between a data point \( (x_i,y_i) \) and the line \( f(x) \) as \( y_i-f(x_i) \). Note that this difference can be negative or positive depending if the data point lies below or above the line. We can then take the absolute value of all the distances, and try to minimize them. When we minimize something we take the derivative of the expression and put it equal to zero.  As you might remember from Calculus it is extremely hard to work with the derivative of the absolute value, because it is discontinuous. A much better approach is to square each distance and sum them:</p>
@@ -1822,9 +1821,9 @@ Thomas algorithm might do the trick.
 <center> <!-- figure label: --> <div id="fig:nlin:heat"></div> <!-- FIGURE -->
 <hr class="figure">
 <center>
-<p class="caption">Figure 19:  Conservation of energy and the continuity equation.  <!-- caption label: fig:nlin:heat --> </p>
+<p class="caption">Figure 19: Conservation of energy and the continuity equation.  <!-- caption label: fig:nlin:heat --></p>
 </center>
-<p><img src="fig-lin/heat.png" align="bottom" width=700></p>
+<p><img src="fig-lin/heat.png" width="700" align="bottom"></p>
 </center>
 
 <p>In figure <a href="#fig:nlin:heat">19</a>, the continuity equation is derived for
@@ -1911,9 +1910,9 @@ $$
 <center> <!-- figure label: --> <div id="fig:nlin:hgrid"></div> <!-- FIGURE -->
 <hr class="figure">
 <center>
-<p class="caption">Figure 20:  Finite difference grid for \( N=4 \).  <!-- caption label: fig:nlin:hgrid --> </p>
+<p class="caption">Figure 20: Finite difference grid for \( N=4 \).  <!-- caption label: fig:nlin:hgrid --></p>
 </center>
-<p><img src="fig-lin/heat_grid.png" align="bottom" width=200></p>
+<p><img src="fig-lin/heat_grid.png" width="200" align="bottom"></p>
 </center>
 
 <p>In figure <a href="#fig:nlin:hgrid">20</a>, the finite difference grid is shown for
@@ -2194,7 +2193,7 @@ Tb <span style="color: #666666">=</span> sc<span style="color: #666666">.</span>
 <li> Compare the sparse solver with the standard Numpy solver using <code>%timeit</code>, how large must the linear system be before an improvement in speed is seen?</li>
 </ul>
 <!-- --- end exercise --- -->
-<h1 id="co-_2-diffusion-into-aquifers" class="anchor">CO$_2$ diffusion into aquifers </h1>
+<h1 id="co-2-diffusion-into-aquifers" class="anchor">CO$_2$ diffusion into aquifers </h1>
 <p>The transport of CO$_2$ into aquifers can be described according to the diffusion equation</p>
 $$
 \begin{equation}
@@ -2208,9 +2207,9 @@ $$
 <center> <!-- figure label: --> <div id="fig:lin:co2_diff"></div> <!-- FIGURE -->
 <hr class="figure">
 <center>
-<p class="caption">Figure 21:  Discretization for diffusion of \co\ into an aquifer, including boundary conditions.  <!-- caption label: fig:lin:co2_diff --> </p>
+<p class="caption">Figure 21: Discretization for diffusion of \co\ into an aquifer, including boundary conditions.  <!-- caption label: fig:lin:co2_diff --></p>
 </center>
-<p><img src="fig-lin/co2_diff.png" align="bottom" width=800></p>
+<p><img src="fig-lin/co2_diff.png" width="400" align="bottom"></p>
 </center>
 
 <p>In the following we will assume that there are only four nodes (\( i=0\ldots 3 \)) in the physical domain, and two ghost nodes \( i=-1 \), and \( i=4 \). There are many ways to attack this problem, but in the following we will borrow ideas from Finite Volume. Finite volume methods is a way of discretizing equations such that we <em>conserve mass</em>. The diffusion equation as it is derived in figure <a href="#fig:nlin:heat">19</a>, express that the flux of something (heat, particles, etc) leaving the box surface minus the flux entering the surface of the box is equal to the rate of change of something inside the box. We can formulate this mathematically as:</p>
@@ -2330,11 +2329,9 @@ $$
 <p>
 <!-- navigation buttons at the bottom of the page -->
 <ul class="pager">
-
   <li class="previous">
     <a href="._book003.html">&larr; Prev</a>
   </li>
-
   <li class="next">
     <a href="._book005.html">Next &rarr;</a>
   </li>
@@ -2351,5 +2348,4 @@ $$
 -->
 </body>
 </html>
-    
 
