--- a/html/._book005.html
+++ b/html/._book005.html
@@ -1,6 +1,5 @@
 <!--
-HTML file automatically generated from DocOnce source
-(https://github.com/doconce/doconce/)
+File automatically generated using DocOnce (https://github.com/doconce/doconce/):
 doconce format html book.do.txt CHAPTER=chapter BOOK=book APPENDIX=appendix --exercise_numbering=chapter --html_style=bootswatch_journal --html_code_style=inherit --html_output=book
 -->
 <html>
@@ -232,7 +231,7 @@ code { color: inherit; background-color: transparent; }
               ('CO$_2$ diffusion into aquifers',
                1,
                None,
-               'co-_2-diffusion-into-aquifers'),
+               'co-2-diffusion-into-aquifers'),
               ('Optimization and nonlinear systems', 0, 'ch:nlin', 'ch:nlin'),
               ('Nonlinear equations', 1, None, 'nonlinear-equations'),
               ('Example: van der Waals equation of state',
@@ -242,7 +241,7 @@ code { color: inherit; background-color: transparent; }
               ('Exercise 5.1: van der Waal EOS and CO$_2$',
                2,
                None,
-               'exercise-5-1-van-der-waal-eos-and-co-_2'),
+               'exercise-5-1-van-der-waal-eos-and-co-2'),
               ('Fixed-point iteration', 1, None, 'fixed-point-iteration'),
               ('Exercise 5.2: Implement the fixed point iteration',
                2,
@@ -511,11 +510,11 @@ $$
      <!-- navigation toc: --> <li><a href="._book004.html#exercise-4-2-curing-of-concrete-and-matrix-formulation" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Exercise 4.2: Curing of Concrete and Matrix Formulation</a></li>
      <!-- navigation toc: --> <li><a href="._book004.html#exercise-4-3-solve-the-full-heat-equation" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Exercise 4.3: Solve the full heat equation</a></li>
      <!-- navigation toc: --> <li><a href="._book004.html#exercise-4-4-using-sparse-matrices-in-python" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Exercise 4.4: Using sparse matrices in python</a></li>
-     <!-- navigation toc: --> <li><a href="._book004.html#co-_2-diffusion-into-aquifers" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;CO$_2$ diffusion into aquifers</a></li>
+     <!-- navigation toc: --> <li><a href="._book004.html#co-2-diffusion-into-aquifers" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;CO$_2$ diffusion into aquifers</a></li>
      <!-- navigation toc: --> <li><a href="#ch:nlin" style="font-size: 80%;"><b>Optimization and nonlinear systems</b></a></li>
      <!-- navigation toc: --> <li><a href="#nonlinear-equations" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;Nonlinear equations</a></li>
      <!-- navigation toc: --> <li><a href="#example-van-der-waals-equation-of-state" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;Example: van der Waals equation of state</a></li>
-     <!-- navigation toc: --> <li><a href="#exercise-5-1-van-der-waal-eos-and-co-_2" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Exercise 5.1: van der Waal EOS and CO$_2$</a></li>
+     <!-- navigation toc: --> <li><a href="#exercise-5-1-van-der-waal-eos-and-co-2" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Exercise 5.1: van der Waal EOS and CO$_2$</a></li>
      <!-- navigation toc: --> <li><a href="#fixed-point-iteration" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;Fixed-point iteration</a></li>
      <!-- navigation toc: --> <li><a href="#exercise-5-2-implement-the-fixed-point-iteration" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Exercise 5.2: Implement the fixed point iteration</a></li>
      <!-- navigation toc: --> <li><a href="#exercise-5-3-finding-the-molar-volume-from-the-van-der-waal-eos-by-fixed-point-iteration" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Exercise 5.3: Finding the molar volume from the van der Waal EOS by fixed point iteration</a></li>
@@ -625,9 +624,9 @@ $$
 <center> <!-- figure label: --> <div id="fig:nlin:fx"></div> <!-- FIGURE -->
 <hr class="figure">
 <center>
-<p class="caption">Figure 22:  Notice that the root is located at the same place (\( x=0.703467417 \))  <!-- caption label: fig:nlin:fx --> </p>
+<p class="caption">Figure 22: Notice that the root is located at the same place (\( x=0.703467417 \))  <!-- caption label: fig:nlin:fx --></p>
 </center>
-<p><img src="fig-nlin/fx.png" align="bottom" width=800></p>
+<p><img src="fig-nlin/fx.png" width="400" align="bottom"></p>
 </center>
 
 <p>In the case of more than one unknown, or a set of equations that must be satisfied simultaneously, equation <a href="#mjx-eqn-6.2">(6.2)</a> is replaced with a vector equation</p>
@@ -688,9 +687,9 @@ $$
 <center> <!-- figure label: --> <div id="fig:nlin:vdw"></div> <!-- FIGURE -->
 <hr class="figure">
 <center>
-<p class="caption">Figure 23:  van der Waal isotherms.  <!-- caption label: fig:nlin:vdw --> </p>
+<p class="caption">Figure 23: van der Waal isotherms.  <!-- caption label: fig:nlin:vdw --></p>
 </center>
-<p><img src="fig-nlin/vdw.png" align="bottom" width=800></p>
+<p><img src="fig-nlin/vdw.png" width="400" align="bottom"></p>
 </center>
 
 <p>In figure <a href="#fig:nlin:vdw">23</a>, we have plotted the isotherms. Note that if \( \hat{T} < 1 \) (\( T < T_c \)), there might be more than one solution for the molar volume. This is clearly unphysical and additional constraints are needed. For the curve \( \hat{T}=0.9 \), the dashed lined shows that for \( \hat{P}=0.7 \), there are three solutions. This is a typical behavior of the cubic EOS, and physically it corresponds to the saturated case, where the vapor and liquid phase co-exist. The left root is the liquid state and the right root is the vapor state. The root in the middle represents a meta stable state.</p>
@@ -701,7 +700,7 @@ $$
 
 
 <!-- --- begin exercise --- -->
-<h2 id="exercise-5-1-van-der-waal-eos-and-co-_2" class="anchor">Exercise 5.1: van der Waal EOS and CO$_2$ </h2>
+<h2 id="exercise-5-1-van-der-waal-eos-and-co-2" class="anchor">Exercise 5.1: van der Waal EOS and CO$_2$ </h2>
 
 <p>Use equation <a href="#mjx-eqn-6.5">(6.5)</a>, and the parameters for CO$_2$: a=3.640 L$^2$bar/mol, and b=0.04267 L/mol, to test the van der Waal EOS in equation <a href="#mjx-eqn-6.5">(6.5)</a>. Use that at 2 MPa and 100 $^\circ$C, CO$_2$ has a specific volume of 0.033586 m$^3$/kg.</p>
 
@@ -760,9 +759,9 @@ $$
 <center> <!-- figure label: --> <div id="fig:nlin:fg"></div> <!-- FIGURE -->
 <hr class="figure">
 <center>
-<p class="caption">Figure 24:  Two examples of iterative functions, that will give the same solution.  <!-- caption label: fig:nlin:fg --> </p>
+<p class="caption">Figure 24: Two examples of iterative functions, that will give the same solution.  <!-- caption label: fig:nlin:fg --></p>
 </center>
-<p><img src="fig-nlin/f_g_comb.png" align="bottom" width=800></p>
+<p><img src="fig-nlin/f_g_comb.png" width="400" align="bottom"></p>
 </center>
 
 <!-- --- begin exercise --- -->
@@ -1099,9 +1098,9 @@ $$
 <center> <!-- figure label: --> <div id="fig:nlin:bisection"></div> <!-- FIGURE -->
 <hr class="figure">
 <center>
-<p class="caption">Figure 25:  Illustration of the bisection method for the van der Waal EOS.  <!-- caption label: fig:nlin:bisection --> </p>
+<p class="caption">Figure 25: Illustration of the bisection method for the van der Waal EOS.  <!-- caption label: fig:nlin:bisection --></p>
 </center>
-<p><img src="fig-nlin/bisection.png" align="bottom" width=800></p>
+<p><img src="fig-nlin/bisection.png" width="400" align="bottom"></p>
 </center>
 
 <p>The algorithm is as follows:</p>
@@ -1201,9 +1200,9 @@ Newtons method is one of the most used methods. If it converges, it converges qu
 <center> <!-- figure label: --> <div id="fig:nlin:newton"></div> <!-- FIGURE -->
 <hr class="figure">
 <center>
-<p class="caption">Figure 26:  Illustration of Newtons method for the van der Waals EOS. <!-- caption label: fig:nlin:newton --> </p>
+<p class="caption">Figure 26: Illustration of Newtons method for the van der Waals EOS. <!-- caption label: fig:nlin:newton --></p>
 </center>
-<p><img src="fig-nlin/newton_comb.png" align="bottom" width=800></p>
+<p><img src="fig-nlin/newton_comb.png" width="400" align="bottom"></p>
 </center>
 
 <p>We can easily derive the algorithm by finding the formula for the tangent line. Using \( y=ax+b \) for the tangent line, we immediately know that \( a=f^\prime(x_k) \). \( b \) can be found as we know that the line intersects \( (x_k,f(x_k)) \): \( f(x_k)=f^\prime(x_k)x_k+b \), hence the equation for the tangent line is \( y=f^\prime(x_k)x+f(x_k)-f^\prime(x_k)x_k \). The next point is located where \( y \) crosses the \( x \)-axis, hence \( 0=f^\prime(x_k)x_{k+1}+f(x_k)-f^\prime(x_k)x_k \). Rearranging this equation, we can write Newtons method in the standard form</p>
@@ -1219,9 +1218,9 @@ $$
 <center> <!-- figure label: --> <div id="fig:nlin:newton2"></div> <!-- FIGURE -->
 <hr class="figure">
 <center>
-<p class="caption">Figure 27:  Illustration of some of the possible challenges with Newtons method. Note that if the derivative is zero somewhere in the search interval, Newtons method will fail.  <!-- caption label: fig:nlin:newton2 --> </p>
+<p class="caption">Figure 27: Illustration of some of the possible challenges with Newtons method. Note that if the derivative is zero somewhere in the search interval, Newtons method will fail.  <!-- caption label: fig:nlin:newton2 --></p>
 </center>
-<p><img src="fig-nlin/newton2.png" align="bottom" width=800></p>
+<p><img src="fig-nlin/newton2.png" width="400" align="bottom"></p>
 </center>
 
 <p>An implementation is shown below.</p>
@@ -1338,9 +1337,9 @@ $$
 <center> <!-- figure label: --> <div id="fig:nlin:newton_bad"></div> <!-- FIGURE -->
 <hr class="figure">
 <center>
-<p class="caption">Figure 28:  Newtons method performs poorly far away due to the shape of the function close to \( x=-100 \), bisection performs much better while the fixed point method fails.  <!-- caption label: fig:nlin:newton_bad --> </p>
+<p class="caption">Figure 28: Newtons method performs poorly far away due to the shape of the function close to \( x=-100 \), bisection performs much better while the fixed point method fails.  <!-- caption label: fig:nlin:newton_bad --></p>
 </center>
-<p><img src="fig-nlin/newton_bad.png" align="bottom" width=800></p>
+<p><img src="fig-nlin/newton_bad.png" width="400" align="bottom"></p>
 </center>
 
 <div class="alert alert-block alert-success alert-text-normal"><b>A good starting point is crucial</b>
@@ -1378,9 +1377,9 @@ $$
 <center> <!-- figure label: --> <div id="fig:nlin:secant"></div> <!-- FIGURE -->
 <hr class="figure">
 <center>
-<p class="caption">Figure 29:  A graphical illustration of the secant method. Note that the starting points \( x_0 \) and \( x_1 \) do not need to be close. The next point is where the (secant) line crosses the \( x \)-axis.  <!-- caption label: fig:nlin:secant --> </p>
+<p class="caption">Figure 29: A graphical illustration of the secant method. Note that the starting points \( x_0 \) and \( x_1 \) do not need to be close. The next point is where the (secant) line crosses the \( x \)-axis.  <!-- caption label: fig:nlin:secant --></p>
 </center>
-<p><img src="fig-nlin/secant.png" align="bottom" width=800></p>
+<p><img src="fig-nlin/secant.png" width="400" align="bottom"></p>
 </center>
 
 <h2 id="rate-of-convergence" class="anchor">Rate of convergence </h2>
@@ -1486,9 +1485,9 @@ $$
 <center> <!-- figure label: --> <div id="fig:nlin:grad"></div> <!-- FIGURE -->
 <hr class="figure">
 <center>
-<p class="caption">Figure 30:  A very simple example of the gradient descent method.  <!-- caption label: fig:nlin:grad --> </p>
+<p class="caption">Figure 30: A very simple example of the gradient descent method.  <!-- caption label: fig:nlin:grad --></p>
 </center>
-<p><img src="fig-nlin/steepest_descent.png" align="bottom" width=800></p>
+<p><img src="fig-nlin/steepest_descent.png" width="400" align="bottom"></p>
 </center>
 
 <p>Assume that we have a function \( \mathbf{f}(\mathbf{x}) \), that we would like to minimize. The gradient descent algorithm is simply to update parameters according to the derivative (gradient) of \( \mathbf{f} \)</p>
@@ -1754,9 +1753,9 @@ b<span style="color: #666666">=</span>np<span style="color: #666666">.</span>arr
 <center> <!-- figure label: --> <div id="fig:nlin:grsc"></div> <!-- FIGURE -->
 <hr class="figure">
 <center>
-<p class="caption">Figure 31:  First four iterations of the gradient descent solution of linear regression.  <!-- caption label: fig:nlin:grsc --> </p>
+<p class="caption">Figure 31: First four iterations of the gradient descent solution of linear regression.  <!-- caption label: fig:nlin:grsc --></p>
 </center>
-<p><img src="fig-nlin/stdec_comb.png" align="bottom" width=800></p>
+<p><img src="fig-nlin/stdec_comb.png" width="400" align="bottom"></p>
 </center>
 
 </div></p>
@@ -1775,11 +1774,9 @@ b<span style="color: #666666">=</span>np<span style="color: #666666">.</span>arr
 <p>
 <!-- navigation buttons at the bottom of the page -->
 <ul class="pager">
-
   <li class="previous">
     <a href="._book004.html">&larr; Prev</a>
   </li>
-
   <li class="next">
     <a href="._book006.html">Next &rarr;</a>
   </li>
@@ -1796,5 +1793,4 @@ b<span style="color: #666666">=</span>np<span style="color: #666666">.</span>arr
 -->
 </body>
 </html>
-    
 
