--- a/html/._book007.html
+++ b/html/._book007.html
@@ -1,6 +1,5 @@
 <!--
-HTML file automatically generated from DocOnce source
-(https://github.com/doconce/doconce/)
+File automatically generated using DocOnce (https://github.com/doconce/doconce/):
 doconce format html book.do.txt CHAPTER=chapter BOOK=book APPENDIX=appendix --exercise_numbering=chapter --html_style=bootswatch_journal --html_code_style=inherit --html_output=book
 -->
 <html>
@@ -232,7 +231,7 @@ code { color: inherit; background-color: transparent; }
               ('CO$_2$ diffusion into aquifers',
                1,
                None,
-               'co-_2-diffusion-into-aquifers'),
+               'co-2-diffusion-into-aquifers'),
               ('Optimization and nonlinear systems', 0, 'ch:nlin', 'ch:nlin'),
               ('Nonlinear equations', 1, None, 'nonlinear-equations'),
               ('Example: van der Waals equation of state',
@@ -242,7 +241,7 @@ code { color: inherit; background-color: transparent; }
               ('Exercise 5.1: van der Waal EOS and CO$_2$',
                2,
                None,
-               'exercise-5-1-van-der-waal-eos-and-co-_2'),
+               'exercise-5-1-van-der-waal-eos-and-co-2'),
               ('Fixed-point iteration', 1, None, 'fixed-point-iteration'),
               ('Exercise 5.2: Implement the fixed point iteration',
                2,
@@ -511,11 +510,11 @@ $$
      <!-- navigation toc: --> <li><a href="._book004.html#exercise-4-2-curing-of-concrete-and-matrix-formulation" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Exercise 4.2: Curing of Concrete and Matrix Formulation</a></li>
      <!-- navigation toc: --> <li><a href="._book004.html#exercise-4-3-solve-the-full-heat-equation" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Exercise 4.3: Solve the full heat equation</a></li>
      <!-- navigation toc: --> <li><a href="._book004.html#exercise-4-4-using-sparse-matrices-in-python" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Exercise 4.4: Using sparse matrices in python</a></li>
-     <!-- navigation toc: --> <li><a href="._book004.html#co-_2-diffusion-into-aquifers" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;CO$_2$ diffusion into aquifers</a></li>
+     <!-- navigation toc: --> <li><a href="._book004.html#co-2-diffusion-into-aquifers" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;CO$_2$ diffusion into aquifers</a></li>
      <!-- navigation toc: --> <li><a href="._book005.html#ch:nlin" style="font-size: 80%;"><b>Optimization and nonlinear systems</b></a></li>
      <!-- navigation toc: --> <li><a href="._book005.html#nonlinear-equations" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;Nonlinear equations</a></li>
      <!-- navigation toc: --> <li><a href="._book005.html#example-van-der-waals-equation-of-state" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;Example: van der Waals equation of state</a></li>
-     <!-- navigation toc: --> <li><a href="._book005.html#exercise-5-1-van-der-waal-eos-and-co-_2" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Exercise 5.1: van der Waal EOS and CO$_2$</a></li>
+     <!-- navigation toc: --> <li><a href="._book005.html#exercise-5-1-van-der-waal-eos-and-co-2" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Exercise 5.1: van der Waal EOS and CO$_2$</a></li>
      <!-- navigation toc: --> <li><a href="._book005.html#fixed-point-iteration" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;Fixed-point iteration</a></li>
      <!-- navigation toc: --> <li><a href="._book005.html#exercise-5-2-implement-the-fixed-point-iteration" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Exercise 5.2: Implement the fixed point iteration</a></li>
      <!-- navigation toc: --> <li><a href="._book005.html#exercise-5-3-finding-the-molar-volume-from-the-van-der-waal-eos-by-fixed-point-iteration" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Exercise 5.3: Finding the molar volume from the van der Waal EOS by fixed point iteration</a></li>
@@ -617,9 +616,9 @@ concentration is uniform in the tank, i.e. that \( C(t)=C_\text{out}(t) \).
 <center> <!-- figure label: --> <div id="fig:ode:cstr"></div> <!-- FIGURE -->
 <hr class="figure">
 <center>
-<p class="caption">Figure 35:  A continuous stirred tank model, \( C(t)=C_\text{out}(t) \), and \( q_\text{out}=q_\text{in} \).  <!-- caption label: fig:ode:cstr --> </p>
+<p class="caption">Figure 35: A continuous stirred tank model, \( C(t)=C_\text{out}(t) \), and \( q_\text{out}=q_\text{in} \).  <!-- caption label: fig:ode:cstr --></p>
 </center>
-<p><img src="fig-ode/cstr.png" align="bottom" width=800></p>
+<p><img src="fig-ode/cstr.png" width="800" align="bottom"></p>
 </center>
 
 <p>The concentration \( C \) is measured in gram of salt per liter water, and the flow rate \( q \) is liter of water per day. The model for the salt balance in this system can be described in words by:</p>
@@ -751,9 +750,9 @@ $$
 <center> <!-- figure label: --> <div id="fig:ode:euler"></div> <!-- FIGURE -->
 <hr class="figure">
 <center>
-<p class="caption">Figure 36:  The concentration in the tank for different step size \( \Delta t \).  <!-- caption label: fig:ode:euler --> </p>
+<p class="caption">Figure 36: The concentration in the tank for different step size \( \Delta t \).  <!-- caption label: fig:ode:euler --></p>
 </center>
-<p><img src="fig-ode/euler.png" align="bottom" width=800></p>
+<p><img src="fig-ode/euler.png" width="800" align="bottom"></p>
 </center>
 
 <p>In figure <a href="#fig:ode:euler">36</a> the result of the implementation is shown for different values of \( \Delta t \).
@@ -1097,9 +1096,9 @@ $$
 <center> <!-- figure label: --> <div id="fig:ode:adapt_euler"></div> <!-- FIGURE -->
 <hr class="figure">
 <center>
-<p class="caption">Figure 37:  The concentration in the tank using adaptive Euler. Number of Euler steps are: 3006, 117, 48 and 36 for the different step sizes.  <!-- caption label: fig:ode:adapt_euler --> </p>
+<p class="caption">Figure 37: The concentration in the tank using adaptive Euler. Number of Euler steps are: 3006, 117, 48 and 36 for the different step sizes.  <!-- caption label: fig:ode:adapt_euler --></p>
 </center>
-<p><img src="fig-ode/adaptive_euler.png" align="bottom" width=800></p>
+<p><img src="fig-ode/adaptive_euler.png" width="800" align="bottom"></p>
 </center>
 
 <p>In figure <a href="#fig:ode:adapt_euler">37</a> the result of the implementation is shown. 
@@ -1120,9 +1119,9 @@ value, and then another possibility would be to have an \( \epsilon^\prime \) th
 <center> <!-- figure label: --> <div id="fig:ode:rk"></div> <!-- FIGURE -->
 <hr class="figure">
 <center>
-<p class="caption">Figure 38:  Illustration of the Euler algorithm, and a motivation for using the slope a distance from the \( t_n \). <!-- caption label: fig:ode:rk --> </p>
+<p class="caption">Figure 38: Illustration of the Euler algorithm, and a motivation for using the slope a distance from the \( t_n \). <!-- caption label: fig:ode:rk --></p>
 </center>
-<p><img src="fig-ode/rk_fig.png" align="bottom" width=800></p>
+<p><img src="fig-ode/rk_fig.png" width="800" align="bottom"></p>
 </center>
 
 <p>The Euler method only have an accuracy of order \( h \), and a global error that do not go to zero as the step size decrease. 
@@ -1215,9 +1214,9 @@ $$
 <center> <!-- figure label: --> <div id="fig:ode:rk2"></div> <!-- FIGURE -->
 <hr class="figure">
 <center>
-<p class="caption">Figure 39:  The concentration in the tank for different step size \( \Delta t \).  <!-- caption label: fig:ode:rk2 --> </p>
+<p class="caption">Figure 39: The concentration in the tank for different step size \( \Delta t \).  <!-- caption label: fig:ode:rk2 --></p>
 </center>
-<p><img src="fig-ode/rk2.png" align="bottom" width=800></p>
+<p><img src="fig-ode/rk2.png" width="800" align="bottom"></p>
 </center>
 
 <p>In figure <a href="#fig:ode:rk2">39</a> the result of the implementation is shown. 
@@ -1252,9 +1251,9 @@ $$
 <center> <!-- figure label: --> <div id="fig:ode:rk4"></div> <!-- FIGURE -->
 <hr class="figure">
 <center>
-<p class="caption">Figure 40:  The concentration in the tank for different step size \( \Delta t \).  <!-- caption label: fig:ode:rk4 --> </p>
+<p class="caption">Figure 40: The concentration in the tank for different step size \( \Delta t \).  <!-- caption label: fig:ode:rk4 --></p>
 </center>
-<p><img src="fig-ode/rk4.png" align="bottom" width=800></p>
+<p><img src="fig-ode/rk4.png" width="800" align="bottom"></p>
 </center>
 
 <!-- % endif -->
@@ -1318,9 +1317,9 @@ $$
 <center> <!-- figure label: --> <div id="fig:ode:adaptive_rk4"></div> <!-- FIGURE -->
 <hr class="figure">
 <center>
-<p class="caption">Figure 41:  The concentration in the tank for different step size \( \Delta t \). Number of rk4 steps are: 138, 99, 72 and 66 for the different step sizes and 'rtol=0', for 'rtol=tol' the number of rk4 steps are 81, 72, 63, 63. <!-- caption label: fig:ode:adaptive_rk4 --> </p>
+<p class="caption">Figure 41: The concentration in the tank for different step size \( \Delta t \). Number of rk4 steps are: 138, 99, 72 and 66 for the different step sizes and 'rtol=0', for 'rtol=tol' the number of rk4 steps are 81, 72, 63, 63. <!-- caption label: fig:ode:adaptive_rk4 --></p>
 </center>
-<p><img src="fig-ode/adaptive_rk4.png" align="bottom" width=800></p>
+<p><img src="fig-ode/adaptive_rk4.png" width="800" align="bottom"></p>
 </center>
 
 <!-- % endif -->
@@ -1398,7 +1397,7 @@ amount is shown for the various numerical methods.
 
 <div class="row">
   <div class="col-xs-6">
-    <table class="table table-striped table-hover table-condensed">
+    <table class="dotable table-striped table-hover table-condensed">
 <thead>
 <tr><td align="center"><b>&#65279;$\Delta t$</b></td> <td align="center">\( h \)</td> <td align="center"><b> Euler </b></td> <td align="center"><b>RK 2. order</b></td> <td align="center"><b>RK 4. order</b></td> </tr>
 </thead>
@@ -1464,9 +1463,9 @@ data from an actual system, we could compare our model predictions with data fro
 <center> <!-- figure label: --> <div id="fig:ode:cstr3"></div> <!-- FIGURE -->
 <hr class="figure">
 <center>
-<p class="caption">Figure 42:  A simple model for cleaning a salty lake that is connected to two lakes down stream.  <!-- caption label: fig:ode:cstr3 --> </p>
+<p class="caption">Figure 42: A simple model for cleaning a salty lake that is connected to two lakes down stream.  <!-- caption label: fig:ode:cstr3 --></p>
 </center>
-<p><img src="fig-ode/cstr3.png" align="bottom" width=800></p>
+<p><img src="fig-ode/cstr3.png" width="800" align="bottom"></p>
 </center>
 
 <p>For simplicity we will assume that all the lakes have the same volume, \( V \). The governing equations follows
@@ -1550,9 +1549,9 @@ $$
 <center> <!-- figure label: --> <div id="fig:ode:rk4_2"></div> <!-- FIGURE -->
 <hr class="figure">
 <center>
-<p class="caption">Figure 43:  The concentration in the tanks.  <!-- caption label: fig:ode:rk4_2 --> </p>
+<p class="caption">Figure 43: The concentration in the tanks.  <!-- caption label: fig:ode:rk4_2 --></p>
 </center>
-<p><img src="fig-ode/rk4_2.png" align="bottom" width=800></p>
+<p><img src="fig-ode/rk4_2.png" width="800" align="bottom"></p>
 </center>
 
 <!-- % endif -->
@@ -1564,9 +1563,9 @@ tanks in series. The first tank is similar to our original tank, but the second 
 <center> <!-- figure label: --> <div id="fig:ode:cstr2"></div> <!-- FIGURE -->
 <hr class="figure">
 <center>
-<p class="caption">Figure 44:  A continuous stirred tank model with a sampling vessel.  <!-- caption label: fig:ode:cstr2 --> </p>
+<p class="caption">Figure 44: A continuous stirred tank model with a sampling vessel.  <!-- caption label: fig:ode:cstr2 --></p>
 </center>
-<p><img src="fig-ode/cstr2.png" align="bottom" width=800></p>
+<p><img src="fig-ode/cstr2.png" width="800" align="bottom"></p>
 </center>
 
 <p>The governing equations can be found by requiring mass balance for each of the tanks (see equation <a href="#mjx-eqn-8.1">(8.1)</a>:</p>
@@ -1682,9 +1681,9 @@ $$
 <center> <!-- figure label: --> <div id="fig:ode:euler_imp"></div> <!-- FIGURE -->
 <hr class="figure">
 <center>
-<p class="caption">Figure 45:  The concentration in the tanks for \( h=0.01 \). <!-- caption label: fig:ode:euler_imp --> </p>
+<p class="caption">Figure 45: The concentration in the tanks for \( h=0.01 \). <!-- caption label: fig:ode:euler_imp --></p>
 </center>
-<p><img src="fig-ode/euler_imp.png" align="bottom" width=800></p>
+<p><img src="fig-ode/euler_imp.png" width="800" align="bottom"></p>
 </center>
 
 <!-- % endif -->
@@ -1803,6 +1802,8 @@ $$
 
 <!-- --- end solution of exercise --- -->
 
+<!-- --- begin subexercise --- -->
+
 <p>
 <b>a)</b>
 Show that when we take one step of size \( h \) from \( t_0 \) to \( t_1=t_0+h \), \( c=y^{\prime\prime}(t_0)/2 \) in equation <a href="#mjx-eqn-8.18">(8.18)</a>.
@@ -1848,6 +1849,10 @@ $$
 
 <!-- --- end answer of exercise --- -->
 
+<!-- --- end subexercise --- -->
+
+<!-- --- begin subexercise --- -->
+
 <p>
 <b>b)</b>
 Show that when we take two steps of size \( h/2 \) from \( t_0 \) to \( t_1=t_0+h \), Eulers algorithm is:
@@ -1890,6 +1895,10 @@ equation <a href="#mjx-eqn-8.71">(8.71)</a> into equation <a href="#mjx-eqn-8.72
 </p>
 
 <!-- --- end answer of exercise --- -->
+
+<!-- --- end subexercise --- -->
+
+<!-- --- begin subexercise --- -->
 
 <p>
 <b>c)</b>
@@ -1954,16 +1963,16 @@ $$
 
 <!-- --- end answer of exercise --- -->
 
+<!-- --- end subexercise --- -->
+
 <!-- --- end exercise --- -->
 
 <p>
 <!-- navigation buttons at the bottom of the page -->
 <ul class="pager">
-
   <li class="previous">
     <a href="._book006.html">&larr; Prev</a>
   </li>
-
   <li class="next">
     <a href="._book008.html">Next &rarr;</a>
   </li>
@@ -1980,5 +1989,4 @@ $$
 -->
 </body>
 </html>
-    
 
