--- a/html/._book001.html
+++ b/html/._book001.html
@@ -1,6 +1,5 @@
 <!--
-HTML file automatically generated from DocOnce source
-(https://github.com/doconce/doconce/)
+File automatically generated using DocOnce (https://github.com/doconce/doconce/):
 doconce format html book.do.txt CHAPTER=chapter BOOK=book APPENDIX=appendix --exercise_numbering=chapter --html_style=bootswatch_journal --html_code_style=inherit --html_output=book
 -->
 <html>
@@ -232,7 +231,7 @@ code { color: inherit; background-color: transparent; }
               ('CO$_2$ diffusion into aquifers',
                1,
                None,
-               'co-_2-diffusion-into-aquifers'),
+               'co-2-diffusion-into-aquifers'),
               ('Optimization and nonlinear systems', 0, 'ch:nlin', 'ch:nlin'),
               ('Nonlinear equations', 1, None, 'nonlinear-equations'),
               ('Example: van der Waals equation of state',
@@ -242,7 +241,7 @@ code { color: inherit; background-color: transparent; }
               ('Exercise 5.1: van der Waal EOS and CO$_2$',
                2,
                None,
-               'exercise-5-1-van-der-waal-eos-and-co-_2'),
+               'exercise-5-1-van-der-waal-eos-and-co-2'),
               ('Fixed-point iteration', 1, None, 'fixed-point-iteration'),
               ('Exercise 5.2: Implement the fixed point iteration',
                2,
@@ -511,11 +510,11 @@ $$
      <!-- navigation toc: --> <li><a href="._book004.html#exercise-4-2-curing-of-concrete-and-matrix-formulation" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Exercise 4.2: Curing of Concrete and Matrix Formulation</a></li>
      <!-- navigation toc: --> <li><a href="._book004.html#exercise-4-3-solve-the-full-heat-equation" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Exercise 4.3: Solve the full heat equation</a></li>
      <!-- navigation toc: --> <li><a href="._book004.html#exercise-4-4-using-sparse-matrices-in-python" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Exercise 4.4: Using sparse matrices in python</a></li>
-     <!-- navigation toc: --> <li><a href="._book004.html#co-_2-diffusion-into-aquifers" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;CO$_2$ diffusion into aquifers</a></li>
+     <!-- navigation toc: --> <li><a href="._book004.html#co-2-diffusion-into-aquifers" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;CO$_2$ diffusion into aquifers</a></li>
      <!-- navigation toc: --> <li><a href="._book005.html#ch:nlin" style="font-size: 80%;"><b>Optimization and nonlinear systems</b></a></li>
      <!-- navigation toc: --> <li><a href="._book005.html#nonlinear-equations" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;Nonlinear equations</a></li>
      <!-- navigation toc: --> <li><a href="._book005.html#example-van-der-waals-equation-of-state" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;Example: van der Waals equation of state</a></li>
-     <!-- navigation toc: --> <li><a href="._book005.html#exercise-5-1-van-der-waal-eos-and-co-_2" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Exercise 5.1: van der Waal EOS and CO$_2$</a></li>
+     <!-- navigation toc: --> <li><a href="._book005.html#exercise-5-1-van-der-waal-eos-and-co-2" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Exercise 5.1: van der Waal EOS and CO$_2$</a></li>
      <!-- navigation toc: --> <li><a href="._book005.html#fixed-point-iteration" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;Fixed-point iteration</a></li>
      <!-- navigation toc: --> <li><a href="._book005.html#exercise-5-2-implement-the-fixed-point-iteration" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Exercise 5.2: Implement the fixed point iteration</a></li>
      <!-- navigation toc: --> <li><a href="._book005.html#exercise-5-3-finding-the-molar-volume-from-the-van-der-waal-eos-by-fixed-point-iteration" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Exercise 5.3: Finding the molar volume from the van der Waal EOS by fixed point iteration</a></li>
@@ -599,7 +598,7 @@ $$
 <p>Modeling can be broken down into several parts: </p>
 <ol>
 <li> Identify important physical phenomena. This involves abstraction, formulate the key physical mechanisms as mathematical equations. In this process, it is important to interact with people who have domain knowledge.</li>
-<li> Implement the model, solve and validate it against known analytical solutions. Analytical solutions exists when one simplify the system.</li>
+<li> Implement the model, solve and validate it against known analytical solutions. Analytical solutions exists when one simplifies the system.</li>
 <li> Calibrate model parameters against data. A simple model would have much less parameters than a complicated model, hence it is much harder to match data. After this step, one usually needs to identify effects missing or remove effects that might not be important.</li>
 </ol>
 <p>*Aksel Hiorth, September 2022</p>
@@ -665,11 +664,11 @@ $$
 <p><span class="tab"> <span class="tab"> <a href="._book004.html#exercise-4-2-curing-of-concrete-and-matrix-formulation"> Exercise 4.2: Curing of Concrete and Matrix Formulation </a></p>
 <p><span class="tab"> <span class="tab"> <a href="._book004.html#exercise-4-3-solve-the-full-heat-equation"> Exercise 4.3: Solve the full heat equation </a></p>
 <p><span class="tab"> <span class="tab"> <a href="._book004.html#exercise-4-4-using-sparse-matrices-in-python"> Exercise 4.4: Using sparse matrices in python </a></p>
-<p><span class="tab"> <a href="._book004.html#co-_2-diffusion-into-aquifers"> CO$_2$ diffusion into aquifers </a></p>
+<p><span class="tab"> <a href="._book004.html#co-2-diffusion-into-aquifers"> CO$_2$ diffusion into aquifers </a></p>
 <p><a href="._book005.html#ch:nlin"> Optimization and nonlinear systems </a></p>
 <p><span class="tab"> <a href="._book005.html#nonlinear-equations"> Nonlinear equations  </a></p>
 <p><span class="tab"> <a href="._book005.html#example-van-der-waals-equation-of-state"> Example: van der Waals equation of state </a></p>
-<p><span class="tab"> <span class="tab"> <a href="._book005.html#exercise-5-1-van-der-waal-eos-and-co-_2"> Exercise 5.1: van der Waal EOS and CO$_2$ </a></p>
+<p><span class="tab"> <span class="tab"> <a href="._book005.html#exercise-5-1-van-der-waal-eos-and-co-2"> Exercise 5.1: van der Waal EOS and CO$_2$ </a></p>
 <p><span class="tab"> <a href="._book005.html#fixed-point-iteration"> Fixed-point iteration </a></p>
 <p><span class="tab"> <span class="tab"> <a href="._book005.html#exercise-5-2-implement-the-fixed-point-iteration"> Exercise 5.2: Implement the fixed point iteration </a></p>
 <p><span class="tab"> <span class="tab"> <a href="._book005.html#exercise-5-3-finding-the-molar-volume-from-the-van-der-waal-eos-by-fixed-point-iteration"> Exercise 5.3: Finding the molar volume from the van der Waal EOS by fixed point iteration </a></p>
@@ -732,11 +731,9 @@ $$
 <p>
 <!-- navigation buttons at the bottom of the page -->
 <ul class="pager">
-
   <li class="previous">
     <a href="._book000.html">&larr; Prev</a>
   </li>
-
   <li class="next">
     <a href="._book002.html">Next &rarr;</a>
   </li>
@@ -753,5 +750,4 @@ $$
 -->
 </body>
 </html>
-    
 
